# bilibili-mac-client

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  .xctool-args  COMPLIE.md  HOW_TO_BUILD.md  HOW_TO_COMPILE  ISSUE_TEMPLATE.md  LICENSE  Plug-Ins.md  Privacy_Policy.md  README.md  fabric_submit_script.sh  genkey.sh
AirPlay/: AirPlay.cpp  AirPlay.hpp  AirPlay.mm  ServiceDiscovery.cpp  ServiceDiscovery.hpp  reverseHTTP.cpp  reverseHTTP.hpp
AirPlay/Tests/: AirPlayTests.mm
BarrageRenderer/: BarrageHeader.h  NHDisplayLink.h  NHDisplayLink.m  NSLabel.h  NSLabel.m  NSValue+iOS.h  NSValue+iOS.m  NSView+UIView.h  NSView+UIView.m
BarrageRenderer/BarrageEngine/: BarrageCanvas.h  (+11 more)
VideoPolymer.xcworkspace/: contents.xcworkspacedata
bilibili/: AboutView.m  AppDelegate.h  AppDelegate.m  AppDelegate.mm  BilibiliSocketClient.h  BilibiliSocketClient.mm  CommentBlockSettings.h  CommentFilter.c  CommentFilter.h  Common.hpp  DownloadManager.h  DownloadManager.m  Info.plist  KeywordBlockSettings.m  LiveChat.h  LiveChat.m  PlayerControlView.m  PlayerView.h  PlayerView.mm  PostComment.m  Settings.h  Settings.m  Socket.cpp  Socket.hpp  ViewController.h  ViewController.m  ViewController.mm  downloadWrapper.h  downloadWrapper.mm  dsa_pub.pem  gencache.sh  main.m  playLocalFile.m  startaria.sh
bilibili.xcodeproj/: project.pbxproj
bilibili/CommentConvert/tests/: CMakeLists.txt  test.sh  testdata.xml
bilibiliTests/: Info.plist  bilibiliTests.m  coverall.sh
chrome-extension/: manifest.json  popup.html
plugin/: TYPCN_Root_G3.crt
tools/: merge_locale_string.py
(+391 files in other folders)
